tests/rosetta/out/Smalltalk/de-bruijn-sequences.out
/tmp/de-bruijn-sequences.st:7: parse error, expected ']'
